--- a/MainWindow.axaml
+++ b/MainWindow.axaml
@@ -13,30 +13,49 @@
 		Background="Black"
 	>
 	<Rectangle Margin="0 0 0 4" Grid.Row="0" Fill="#333333"></Rectangle>
-	<SplitView Grid.Row="1" IsPaneOpen="True"
+	<SplitView
+		Grid.Row="1"
+		IsPaneOpen="True"
 		DisplayMode="CompactInline"
 		OpenPaneLength="300"
 	>
 		<SplitView.Pane>
-			<StackPanel
+			<Grid
 				Background="#777777"
+				RowDefinitions="50, *"
 			>
 				<Label
 					VerticalAlignment="Center"
 					HorizontalAlignment="Center"
 					FontSize="24"
 					FontWeight="800"
+					Grid.Row="0"
 				>
 					CONTENT
 				</Label>
-			</StackPanel>
+				<!--<ListBox x:Name="topics" Grid.Row="1" Items="{Binding topicsIndexList}">
+					<ListBox.ItemTemplate>
+						<DataTemplate>
+							<Border BorderBrush="Blue" BorderThickness="1"
+								CornerRadius="4" Padding="4"
+							>
+								<TextBlock Text="{Binding}"/>
+							</Border>
+						</DataTemplate>
+					</ListBox.ItemTemplate>
+				</ListBox>-->
+			</Grid>
 		</SplitView.Pane>
 
 		<Grid
 			Grid.Row="1"
 			ColumnDefinitions="*, *"
 		>
-			<Rectangle Margin="4 0 0 4" Grid.Column="0" Fill="#555555"></Rectangle>
+			<StackPanel Margin="4 0 0 4" Grid.Column="0" Background="#555555">
+				<StackPanel VerticalAlignment="Top" HorizontalAlignment="Left" Width="20" Margin="4 -2 4 4">
+					<Image Source="{SvgImage Assets/Images/bookmark.svg}" />
+				</StackPanel>
+			</StackPanel>
 			<Rectangle Margin="4 0 4 4" Grid.Column="1" Fill="#555555"></Rectangle>
 		</Grid>
 	</SplitView>
